--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="header">
     
             <nav class="navbar">
-                <h1>Brittany M. Portfolio</h1>
+                <h1 alt="Brittany Montanye">Brittany M. Portfolio</h1>
                     <ul>
                         <li><a id="bio" href="#">Bio</a></li>
                         <li><a id="Portfolio" href="#">Samples</a></li>
@@ -40,16 +40,13 @@
             </section>
             <section id="portfolio" class="portfolio">
                 <h2> Portfolio:.:.</h2>
-                <br>
                     <h4 class="prep">Prep for Bootcamp</h4>
                         <img class="prep" src="./assets/prep.png" alt="prep notes">
                             <p> Here you will find a basic cheat sheet for prep. <br>
                             It has helpful nuggets of info before you dive in to Bootcamp! </p>
-                            <br>
                     <h4 class="example">CSS/HTML Example</h4>
                         <img class="css" src="./assets/hellocode.png" alt="HTML CSS Example">
                             <p> Here is an Example of CSS and HTML working together!<br></p>
-                            <br>
                     <h4 class="java"> Javascript Example</h4>
                         <img class="javacup" src="./assets/javacup.png" alt="Javascript"><br>
                             <p> TBD!<br></p>
