--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="header">
     
             <nav class="navbar">
-                <h1 alt="Brittany Montanye">Brittany M. Portfolio</h1>
+                <h1 alt="Brittany Montanye">Brittany's Portfolio</h1>
                     <ul>
                         <li><a id="bio" href="#">Bio</a></li>
                         <li><a id="Portfolio" href="#">Samples</a></li>
@@ -24,7 +24,7 @@
    <div class="banner">
         <main class="content">
             <section class="bio" id="bio">
-                <h2><a href="bio"></a>About:.:.</h2>
+                <h2><a href="bio"></a>.:.About:.:.</h2>
                     <img src="" alt="" href>
                         <p>Brittany is originally from Arizona where she has moved to Colorado for 5 years and now is off to Florida! 
                         She has worked in financial compliance for over 10 years and has never stopped learning. She has a Master of Science degree in Clinical and Forensic Psychology
@@ -38,22 +38,29 @@
                         and hopes to keep building her data and coding skills to be a true asset to the field of finTech and the
                         a leader in the growing use of AI.</p>
             </section>
-            <section id="portfolio" class="portfolio">
-                <h2> Portfolio:.:.</h2>
-                    <h4 class="prep">Prep for Bootcamp</h4>
-                        <img class="prep" src="./assets/prep.png" alt="prep notes">
-                            <p> Here you will find a basic cheat sheet for prep. <br>
-                            It has helpful nuggets of info before you dive in to Bootcamp! </p>
-                    <h4 class="example">CSS/HTML Example</h4>
-                        <img class="css" src="./assets/hellocode.png" alt="HTML CSS Example">
-                            <p> Here is an Example of CSS and HTML working together!<br></p>
-                    <h4 class="java"> Javascript Example</h4>
-                        <img class="javacup" src="./assets/javacup.png" alt="Javascript"><br>
-                            <p> TBD!<br></p>
+            <section class="portfolio" id="portfolio">
+                <h2 class="title">.:.Portfolio:.:.</h2><br>
                 <br>
+                    <span>
+                        <h4 class="prepbox">Prep for Bootcamp</h4>
+                            <img class="prep" src="./assets/prep.png" alt="prep notes">
+                                <p> Here you will find a basic cheat sheet for prep. <br>
+                                It has helpful nuggets of info before you dive in to Bootcamp! </p>
+                    </span>
+                                <span>
+                        <h4 class="examplebox">CSS/HTML Example</h4>
+                            <img class="example" src="./assets/hellocode.png" alt="HTML CSS Example">
+                                <p> Here is an Example of CSS and HTML working together!<br></p>
+                                </span>
+                    <span>
+                        <h4 class="javabox"> Javascript Example</h4>
+                            <img class="java" src="./assets/javacup.png" alt="Javascript"><br>
+                                <p> TBD! Test test test test<br></p>
+                                </span>
+
             </section>
             <section id="credentials">
-            <h2> Credentials and Education </h2>
+            <h2> .:.Credentials and Education:.:. </h2>
                 <br>
                 <img src="" alt="">
                     <p>
@@ -80,14 +87,26 @@
             </section>
 
             <section> 
-                <h3>Special Thanks</h3>
+                <h3>Extra Resources</h3>
                     <ul>
                         <li><a href="https://www.w3schools.com">W3Schools Tutorials</a></li>
+                        <li><a href=""> GreatStack on Youtube</a></li>
                     </ul>
             </section>
 
 
         </aside>
 </body>
-<div class="banner"></div>
+<footer>
+    <div class="banner2"></div>
+
+
+
+
+
+
+
+
+</footer>
+
 </html>
