--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br>
 portfolio holds images that should hyperlink to links below
                 <span id="span">
-                    <a href="https://maslowmae.github.io/ucf/"><img class="span img" src="./assets/prep.png" alt="prep notes"></a>
+                    <a href="https://maslowmae.github.io/prework-study-guide-new/"><img class="span img" src="./assets/prep.png" alt="prep notes"></a>
                     <br>
                     <br>
                         <h4 class="prepbox">Prep notes for Bootcamp!</h4>
@@ -108,7 +108,7 @@ portfolio holds images that should hyperlink to links below
                 <h3 class="bounce" id="bio"> Contact Brittany!</h3>
                 <br>
 
-             <form action="contactform.php" method="post (if using a password)" or "get" if no passwords> -->
+             <form action="contactform.php" method="post" >
                    <form>
                         <input type="text" name="fname" placeholder="first name">
                         <br>
@@ -166,11 +166,4 @@ portfolio holds images that should hyperlink to links below
     </div>
 
 </body>
-<<<<<<< HEAD
-=======
-<footer>
-
-</footer>
-
->>>>>>> 2f393810dd4a2adedf14d1d6941a494d24179b87
 </html>
