update style and index changes

--- a/index.html
+++ b/index.html
@@ -53,31 +53,27 @@
 
                 <h2 id="portfolio" class="titleportfolio">.:.Portfolio:.:.</h2><br>
                 
-<!-- portfolio holds images that should hyperlink to links below -->
-                <div class="portfolioitem">
+                <div class="portfolioitem1">
                     <a href="https://maslowmae.github.io/prework-study-guide-new/"><img class="span img"
                             src="./assets/prep.png" alt="prep notes"></a>
-
-                    <h4 class="prepbox">Prep notes for Bootcamp!</h4>
-
-                    <p class="description"> Here you will find a basic cheat sheet for initial prep. <br>
-                        It has helpful nuggets of info before you dive in to Bootcamp! </p>
+                        <h4>Prep notes for Bootcamp!</h4>
+                            <p class="description"> Here you will find a basic cheat sheet for initial prep. <br>
+                            It has helpful nuggets of info before you dive in to Bootcamp! </p>
                 </div>
 
                 <div class="portfolioitem">
                     <a href="https://maslowmae.github.io/ucf/"><img class="span img" src="./assets/hellocode.png"
                             alt="HTML CSS work example"></a>
-
-                    <h4 class="examplebox">CSS/HTML Example</h4><br>
-                    <p class="description"> Here is an Example of CSS and HTML working together in a real life output
-                        example of website modification.
-                        Check the inspection tab to explore!!<br></p>
+                        <h4>CSS/HTML Example</h4><br>
+                            <p class="description"> Here is an Example of CSS and HTML working together in a real life output
+                            example of website modification.
+                            Check the inspection tab to explore!!<br></p>
                 </div>
+               
                 <div class="portfolioitem">
-                        <a href=""><img class="java" class="span img" src="./assets/javacup.png" alt="Javascript"></a>
-
+                    <a href=""><img class="java" class="span img" src="./assets/javacup.png" alt="Javascript"></a>
                         <h4 class="javabox"> Javascript Example</h4><br>
-                        <p class="description"> To be continued!<br></p>
+                            <p class="description"> To be continued!<br></p>
                 </div>
             </section>
 
