added bio change

--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
                     their own vulnerabilities and risk appetites.
                     <br>
                     <br>
-                    One of her greates acccomplishements was designing a risk score model where she worked with top
-                    level
-                    engineers to turn it into a ML feature model and scoped for AI. She has worked with SQL to work with
-                    big data and reporting
-                    and hopes to keep building her data and coding skills to be a true asset to the field of finTech and
-                    the
-                    a leader in the growing use of AI.
+                    One of her acccomplishements involved designing a risk score model where she worked with top
+                    level engineers to turn it into a ML feature model and scoped for AI. She has worked with SQL to work with
+                    big data and reporting and hopes to keep building her data and coding skills to be a true asset to the field of finTech and
+                    the a leader in the growing use of AI in finTech.
                 </p>
             </section>
 
